Add all css to code

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
   <section>
-    <div>
+    <div class="div-top">
       <h1>Intense Mint Dark Chocolate</h1>
-      <h2>85% Cocoa</h2>
-      <p>This super intense mint-flavoured 85% dark chocolate will enrich your senses and enlighten your soul—not to mention the fresh mouth feeling.</p>
+      <p class="cocoa"><strong>85% Cocoa</strong></p>
+      <p class="bottom-padding">This super intense mint-flavoured 85% dark chocolate will enrich your senses and enlighten your soul—not to mention the fresh mouth feeling.</p>
       <a href="#">Buy now</a>
     </div>
     <div>
-      <img src="image/placeholder-4by3.svg" alt="" class="img-flex">
+      <img src="images/placeholder-4by3.svg" alt="" class="img-flex">
     </div>
   </section>
 
